...
                                <animations/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="doShowWeather:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h0N-1p-nF0"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter City Name" textAlignment="natural" minimumFontSize="17" id="p8Z-Zc-zTk">
                                <rect key="frame" x="20" y="98" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <animations/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                                <connections>
...
